# unofficial-discord-client

./: CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-w10.yml  clang-format.yml  cmake.yml
cmake/modules/: FindOpus.cmake
src/core/: Channel.cpp  Message.cpp  Message.hpp  Role.hpp  User.cpp  role.cpp  role.hpp
